<resources>
    <string name="app_name">Hogwarts Academy</string>
    <string name="members_activity">House Members</string>
    <string name="character_activity">Character Detail</string>
    <string name="profile_activity">Profile</string>
    <string name="house_name">House</string>
    <string name="headof_house">Head</string>
    <string name="school">Hogwarts School of Witchcraft and Wizardry</string>
    <string name="species">Species</string>
    <string name="blood_status">Blood</string>
    <string name="member_button">See All Member</string>
    <string name="name">Member Name</string>
    <string name="role">Member Role</string>
    <string name="house_label">House</string>
    <string name="school_label">School</string>
    <string name="species_label">Species</string>
    <string name="blood_status_label">Blood Status</string>
    <string name="profile_name">Muhammad Hatta Aldino Ramadhan</string>
    <string name="profile_email">mhattaldino@gmail.com</string>
    <string name="unknown">Unknown</string>
</resources>